--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  body {
+    margin: 0;
+    /* font-family: "Roboto Condensed", "Fira Sans", sans-serif; */
+    color: #f5f5f5;
+    /* background-color: #111827; */
+    background-image: url("./assets/imgs/background-home-desktop.jpg");
+  }
+  @media only screen and (max-width: 768px) {
+    body {
+      background-image: url("./assets/imgs/background-home-tablet.jpg");
+    }
+  }
+}
+
+@layer utilities {
+  .word-space {
+    word-spacing: 5px;
+  }
+  .btn {
+    @apply inline-block px-5 py-3 rounded-lg bg-indigo-500 hover:bg-indigo-400 hover:-translate-y-5 focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-400 focus:ring-opacity-50 active:bg-indigo-600 transform transition text-white uppercase tracking-wider font-semibold text-sm sm:text-base;
+  }
+}
+
+h2 {
+  color: #f5f5f5;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
