--- a/src/index.css
+++ b/src/index.css
@@ -48,19 +48,33 @@ code {
     display: none;
   }
   .parentDiv {
-    /* position: relative; */
+    position: relative;
     display: inline-block;
     cursor: pointer;
   }
+
   .parentDiv:hover .dropdown--content {
     display: flex;
+    position: absolute;
+    right: 0;
+    top: 10;
     flex-direction: column;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 14px;
+    background-color: whitesmoke;
+    color: #000;
+    padding: 4em;
+    border-radius: 10px;
   }
   .dropdown--content :nth-child(n) {
     display: block;
   }
+
+  /* .dropdown--content:nth-child:hover(n) {
+    background-color: rgb(169, 219, 202);
+    padding: 10px;
+    border-radius: 4px;
+  } */
 }
 
 @media only screen and (min-width: 768px) {
